counter-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: counter-pod
  namespace: counter-namespace
  labels:
    name: myAppbusybox
spec:
  containers:
  - name: counter-container
    image: busybox
    command: 
    - /bin/sh
    - -c
    - 'i=0;
      while true;
      do echo "$i: $(date)";
      i=$((i+1));
      sleep 1;
      done;
      '
