multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: my-multicontainer-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.15.8
    ports:
    - containerPort: 80
  - name: busybox
    image: busybox
    command: ['sh', '-c', "while true; do sleep 30; done;"]
