my-annotation-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-annotation-pod
  annotations:
    owner: mogueye87@gmail.com
    git-commit: bdab0c6
spec:
  containers:
  - name: nginx
    image: nginx
