my-commands-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: my-args-pod
 labels:
   app: my-app
spec:
 containers:
 - name: my-commands-container
   image: busybox
   command: ['echo']
   args: ['This is a custom argument']
 restartPolicy: Never
