my-development-label-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-development-label
  labels:
    app: my-app
    environment: development
spec:
  containers:
  - name: nginx
    image: nginx
