my-secret-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: my-secret-pod
spec:
 containers: 
 - name: myapp-container
   image: busybox
   command: ['sh', '-c', "echo Hello World! && sleep 3600"]
