my-securitycontext-no-access-right-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-securitycontext-pod
spec:
  # Give the user limited privelege right rather than root privelege
  securityContext: 
    runAsUser: 2001
    fsGroup: 3001
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', "cat /message/message.txt && sleep 3600"]
    volumeMounts:
    - name: message-volume
      mountPath: /message
  volumes:
  - name: message-volume
    hostPath:
      path: /etc/message
