nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"nginx","namespace":"nginx-ns"},"spec":{"containers":[{"image":"nginx:1.158","name":"nginx"}]}}
  creationTimestamp: null
  name: nginx
  selfLink: /api/v1/namespaces/nginx-ns/pods/nginx
spec:
  containers:
  - image: nginx:1.15.8
    imagePullPolicy: IfNotPresent
    name: nginx
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-tnwk6
      readOnly: true
    livenessProbe:
      # an http request probe, the readiness probe will perform an http get request to the pod,
      # an the response will determine if the pod is ready to service request
      httpGet: 
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5      
  dnsPolicy: ClusterFirst
  nodeName: mogueye873c.mylabserver.com
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-tnwk6
    secret:
      defaultMode: 420
      secretName: default-token-tnwk6
status:
  phase: Pending
  qosClass: BestEffort
