rolling-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-deployment
  labels:
    app: nginx
    environment: dev
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: nginx      
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
