test-label-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: my-app
    image: nginx
    ports:
      - containerPort: 80
