nginx-service.yml
apiVersion: v1
kind: Service
metadata: 
  # service name
  name: nginx-svc
  namespace: server
  # label to identify the service
  labels:
    app: nginx-svc
spec:
  # define the type of service
  # ClusterIP is the default service type
  type: ClusterIP   
  # selector of pods on which we want forward traffic 
  # select pods we want expose
  selector:
    app: nginx-server
  ports:
  - protocol: TCP
    # define the ports of the service will listen on
    port: 8080  
    # defines the port on which we want redirect traffic.
    # container port
    targetPort: 80
